--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
         }
     ],
 
-    "version": "0.1.0",
+    "version": "0.1.1",
     "minimum-stability": "dev",
 
     "require": {
-        "yiisoft/yii2": "2.0.*",
-        "p2made/yii2-asset-collection": "2.*"
+        "yiisoft/yii2": "2.*",
+        "p2made/yii2-p2y2-things": "dev-master"
     },
     "autoload": {
         "psr-4": {
