--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 
     "require": {
         "yiisoft/yii2": "2.*",
-        "p2made/yii2-p2y2-things": "dev-master"
+        "p2made/yii2-p2y2-things": ">=1.3"
     },
     "autoload": {
         "psr-4": {
