--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,13 @@
 		}
 	],
 
-	"version": "v0.1.10",
+	"version": "v0.1.11",
 	"minimum-stability": "dev",
 
 	"require": {
-		"yiisoft/yii2": ">=2.0.6",
-		"fxp/composer-asset-plugin": "~1.1",
-		"p2made/yii2-p2y2-things": "v1.11.0",
-		"p2made/yii2-p2y2-things-demo": "v1.11.0"
+		"yiisoft/yii2": ">=2.0.10",
+		"p2made/yii2-p2y2-things": ">=1.14.0",
+		"p2made/yii2-p2y2-things-demo": ">=1.14.0"
 	},
 	"autoload": {
 		"psr-4": {
