--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,13 @@
 		}
 	],
 
-	"version": "0.1.11",
+	"version": "0.1.12",
 	"minimum-stability": "dev",
 
 	"require": {
 		"yiisoft/yii2": ">=2.0.10",
-		"p2made/yii2-p2y2-things": ">=1.14.0",
-		"p2made/yii2-p2y2-things-demo": ">=1.14.0"
+		"p2made/yii2-p2y2-things": "dev-master",
+		"p2made/yii2-p2y2-things-demo": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
