--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,15 @@
 		}
 	],
 
-	"version": "0.3.2",
+	"version": "0.3.3",
 	"minimum-stability": "dev",
 
 	"require": {
 		"php": ">=5.4.0",
 		"yiisoft/yii2": "^2.0",
-		"p2made/yii2-p2y2-things": "^2.3",
-		"p2made/yii2-p2y2-things-demo": "^2.3"
+		"p2made/yii2-p2y2-base": "^1.0",
+		"p2made/yii2-p2y2-things": "^2.4",
+		"p2made/yii2-p2y2-things-demo": "^2.4"
 	},
 	"autoload": {
 		"psr-4": {
