--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,9 @@
 		}
 	],
 
-	"version": "0.5.1",
+	"version": "0.6.0",
 	"minimum-stability": "dev",
+	"prefer-stable" : true,
 
 	"require": {
 		"php": ">=5.4.0",
