--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,8 @@
 		}
 	],
 
-	"version": "0.6.0",
+	"version": "0.5.2-beta",
 	"minimum-stability": "dev",
-	"prefer-stable" : true,
 
 	"require": {
 		"php": ">=5.4.0",
